<resources>
    <string name="app_name">Pomodoro Timer</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="create_new_session_hint">Session name</string>
    <string name="create_new_session_title">New session</string>
    <string name="create_new_session_positive">Create</string>
    <string name="create_new_session_negative">Cancel</string>
    <string name="pomodoro_duration_slider_content_label">Slider for choosing pomodoro duration time in minutes</string>
    <string name="long_break_duration_slider_content_label">Slider for choosing long break duration time in minutes</string>
    <string name="short_break_duration_slider_content_label">Slider for choosing short break duration time in minutes</string>
    <string name="pomodoro_duration_title">Pomodoro</string>
    <string name="short_break_duration_title">Short break</string>
    <string name="long_break_duration_title">Long break</string>
    <string name="duration_label">%d min</string>
    <string name="duration_slider_start">1</string>
    <string name="duration_slider_end">10</string>
    <string name="today_card_title">Today</string>
    <string name="pomodoros_completed">completed pomodoros: %d</string>
    <string name="productivity_time">productivity time: %dh : %dmin</string>
    <string name="today_card_action">Let\'s concentrate</string>
    <string name="week_card_title">This week</string>
    <string name="month_card_title">This month</string>
    <string name="work_icon">work icon</string>
    <string name="coffee_icon">coffee icon</string>
    <string name="lunch_icon">lunch icon</string>
    <string name="settings_duration_title">Durations</string>
    <string name="create_new_task_hint">Task name</string>
    <string name="create_new_task_negative">Cancel</string>
    <string name="create_new_task_positive">Create</string>
    <string name="create_new_task_number_hint">How many pomodoros?</string>
    <string name="create_new_task_title">New task</string>
    <string name="singular_pomodoro">pomodoro</string>
    <string name="plural_pomodoro">pomodoros</string>
    <string name="task_count_session_details">Tasks: %1$d / %2$d</string>
    <string name="pom_count_session_details">Pomodoros: %1$d / %2$d</string>
    <string name="time_progress_session_details">Time: %1$d min / %2$d min</string>
    <string name="start_session">Start</string>
    <string name="create_new_task_description">Create a new task</string>
    <string name="delete_session_button_description">Delete this session</string>
    <string name="see_tasks_button_text">Tasks</string>
    <string name="create_new_session_fab_text">New session</string>
    <string name="delete_task_content_decription">Delete the task</string>
    <string name="toggle_start_play_pause_description">Starts the timer if not started, or toggles play/pause</string>
    <string name="reset_timer_button_description">Resets the current timer</string>
    <string name="circle_control_widget_background_description">Background circle</string>

    <string name="delete_task_content_description">Delete the task</string>
    <string name="service_notification_title">Pomodoro timer running</string>
    <string name="service_notification_title_completed">Pomodoro timer completed</string>
    <string name="service_notification_text_progress_running">%1$s in progress: %2$d min %3$d sec remaining</string>
    <string name="service_notification_text_progress_paused">%1$s paused: %2$d min %3$d sec remaining</string>
    <string name="service_notification_text_progress_completed">%1$s completed</string>

    <string name="timer_minutes_left">%02d</string>
    <string name="timer_seconds_left">%02d</string>
    <string name="all_tasks_completed_description">All tasks are completed.\nGood Job!</string>

    <string name="statistics_widget_description">Monitor your productivity</string>
    <string name="stats_widget_today_title">Today</string>
    <string name="stats_widget_week_title">This week</string>
    <string name="stats_widget_month_title">This month</string>
    <string name="stats_widget_focus_time">%dh% dmin</string>
    <string name="stats_widget_productivity_image_description">Image showing productivity status</string>

    <string name="control_widget_description">Check the timer in the Pomodoro Timer app</string>

    <string name="fake_widget_today_completed">3</string>
    <string name="fake_widget_today_focustime">1h 15min</string>
    <string name="fake_widget_week_completed">6</string>
    <string name="fake_widget_week_focustime">2h 30min</string>
    <string name="fake_widget_month_completed">12</string>
    <string name="fake_widget_month_focustime">5h 0min</string>

    <string name="stats_widget_label">Statistics</string>
    <string name="control_widget_label">Countdown timer</string>

    <!-- https://developer.android.com/guide/app-actions/widgets#tts_requirements -->
    <string name="stats_widget_assistant_text">Here are your statistics for the last period.</string>
    <string name="stats_widget_assistant_speech">Here are your statistics for the last period.</string>

    <string name="control_widget_assistant_text_idle">Here is your widget, open the app to start a timer.</string>
    <string name="control_widget_assistant_speech_idle">Open the app to start a timer.</string>
    <string name="control_widget_assistant_text_active">The timer is running.</string>
    <string name="control_widget_assistant_speech_active">The timer is running.</string>
    <string name="control_config_switch_text">Transparent background</string>
    <string name="control_config_button_text">Add widget</string>

    <string name="sessions_widget_title">Sessions</string>
    <string name="sessions_widget_description">Monitor the list of sessions</string>
    <string name="sessions_widget_label">Sessions list</string>

    <string name="sessions_widget_fake_item_1">algorithms</string>
    <string name="sessions_widget_fake_item_2">ai</string>
    <string name="control_widget_preview_minutes">25</string>
    <string name="control_widget_preview_seconds">00</string>
</resources>