<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@android:id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    android:theme="@style/AppWidgetTheme">

    <LinearLayout
        android:id="@+id/statistics_widget_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/today_title_widget"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stats_widget_today_title" />

        <LinearLayout
            android:id="@+id/today_stats_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/today_completed_text_widget"
                style="@style/TextAppearance.Material3.DisplayMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="10"
                android:text="@string/fake_widget_today_completed" />

            <TextView
                android:id="@+id/today_focus_time_text_widget"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_weight="1"
                android:text="@string/fake_widget_today_focustime"
                android:textAlignment="textEnd" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>