<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/controlWidgetLayoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:theme="@style/AppWidgetTheme"

    tools:ignore="RtlHardcoded">
    <!-- Ignoro il warning che mi dice di sostituire layout_alignParentRight con layout_alignParentEnd perchè
    questa disposizione non è semantica, è un aspetto grafico non collegato con nessun testo -->


    <!-- https://stackoverflow.com/a/14300009 -->
    <ImageView
        android:id="@+id/bgCircle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/circle_control_widget_background_description"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/circle_stroke_medium_pom" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="#00000000">

        <TextView
            android:id="@+id/minTv"
            style="@style/TextAppearance.Material3.DisplayLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:fontFamily="monospace"
            android:gravity="left"
            android:includeFontPadding="false"
            android:paddingVertical="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="10dp"
            android:text="@string/control_widget_preview_minutes" />

        <TextView
            android:id="@+id/secTv"
            style="@style/TextAppearance.Material3.DisplayMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:fontFamily="monospace"
            android:gravity="right"
            android:includeFontPadding="false"
            android:paddingVertical="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:text="@string/control_widget_preview_seconds" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/controlBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_corner_control"
        android:contentDescription="@string/toggle_start_play_pause_description"
        android:padding="10dp"
        android:src="@drawable/play_arrow_fill1_wght400_grad0_opsz48"
        android:tint="?colorOnTertiaryContainer"
        tools:ignore="UseAppTint" />

    <ImageButton
        android:id="@+id/resetBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/rounded_corner_reset"
        android:src="@drawable/restart_alt_fill0_wght400_grad0_opsz48"
        android:contentDescription="@string/reset_timer_button_description"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:tint="?colorOnPrimaryContainer"
        tools:ignore="UseAppTint" />
</RelativeLayout>

    <!-- LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/controlWidgetLayoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="?android:attr/colorBackground"
    android:theme="@style/AppTheme">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/timeTv"
        />
    <ImageButton
        android:id="@+id/controlBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?colorTertiaryContainer"
        app:tint="?colorOnTertiaryContainer"
        />
    <ImageButton
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?colorPrimaryContainer"
        app:tint="?colorOnPrimaryContainer"
        android:src="@drawable/restart_alt_fill0_wght400_grad0_opsz48"
        />

    // android:background="#FCCC"
    // android:iconTint= "#FCCC"
    // app:tint="#FCCC"
    // android:backgroundTint="#FCCC"
    // android:tintMode="multiply"
    // android:backgroundTintMode="multiply"
    >
    </LinearLayout -->