<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="mainViewModel"
            type="it.unipd.dei.esp2023.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".settings.SettingsFragment">

        <TextView
            android:id="@+id/pomodoro_duration_text"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/pomodoro_duration_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.slider.Slider
            android:id="@+id/pomodoro_duration_slider"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pomodoro_duration_slider_content_label"
            android:stepSize="1"
            android:value="@{mainViewModel.pomodoroDuration}"
            android:valueFrom="1"
            android:valueTo="10"
            app:layout_constraintBottom_toBottomOf="@+id/pomdoro_slider_start_label"
            app:layout_constraintEnd_toStartOf="@+id/pomodoro_slider_end_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pomdoro_slider_start_label"
            app:layout_constraintTop_toTopOf="@+id/pomdoro_slider_start_label" />

        <TextView
            android:id="@+id/pomodoro_duration_label"
            style="?attr/textAppearanceBodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@{@string/duration_label(mainViewModel.pomodoroDuration)}"
            app:layout_constraintBaseline_toBaselineOf="@+id/pomodoro_duration_text"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/short_break_duration_text"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/short_break_duration_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pomodoro_duration_slider" />

        <com.google.android.material.slider.Slider
            android:id="@+id/short_break_duration_slider"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/short_break_duration_slider_content_label"
            android:stepSize="1"
            android:value="@{mainViewModel.shortBreakDuration}"
            android:valueFrom="1"
            android:valueTo="10"
            app:layout_constraintBottom_toBottomOf="@+id/short_break_slider_start_label"
            app:layout_constraintEnd_toStartOf="@+id/short_break_slider_end_label"
            app:layout_constraintStart_toEndOf="@id/short_break_slider_start_label"
            app:layout_constraintTop_toTopOf="@+id/short_break_slider_start_label" />

        <TextView
            android:id="@+id/short_break_duration_label"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@{@string/duration_label(mainViewModel.shortBreakDuration)}"
            app:layout_constraintBaseline_toBaselineOf="@+id/short_break_duration_text"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/long_break_duration_text"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/long_break_duration_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/short_break_duration_slider" />

        <com.google.android.material.slider.Slider
            android:id="@+id/long_break_duration_slider"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/long_break_duration_slider_content_label"
            android:stepSize="1"
            android:value="@{mainViewModel.longBreakDuration}"
            android:valueFrom="1"
            android:valueTo="10"
            app:layout_constraintBottom_toBottomOf="@+id/long_break_slider_start_label"
            app:layout_constraintEnd_toStartOf="@+id/long_break_slider_end_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/long_break_slider_start_label"
            app:layout_constraintTop_toTopOf="@+id/long_break_slider_start_label" />

        <TextView
            android:id="@+id/long_break_duration_label"
            style="?attr/textAppearanceBodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@{@string/duration_label(mainViewModel.longBreakDuration)}"
            app:layout_constraintBaseline_toBaselineOf="@+id/long_break_duration_text"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/pomdoro_slider_start_label"
            style="@style/TextAppearance.Material3.LabelSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/duration_slider_start"
            app:layout_constraintEnd_toStartOf="@+id/pomodoro_duration_slider"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pomodoro_duration_text" />

        <TextView
            android:id="@+id/pomodoro_slider_end_label"
            style="@style/TextAppearance.Material3.LabelSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/duration_slider_end"
            app:layout_constraintBottom_toBottomOf="@+id/pomodoro_duration_slider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pomodoro_duration_slider" />

        <TextView
            android:id="@+id/short_break_slider_start_label"
            style="@style/TextAppearance.Material3.LabelSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/duration_slider_start"
            app:layout_constraintEnd_toStartOf="@+id/short_break_duration_slider"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/short_break_duration_text" />

        <TextView
            android:id="@+id/short_break_slider_end_label"
            style="@style/TextAppearance.Material3.LabelSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/duration_slider_end"
            app:layout_constraintBottom_toBottomOf="@+id/short_break_duration_slider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/short_break_duration_slider" />

        <TextView
            android:id="@+id/long_break_slider_start_label"
            style="@style/TextAppearance.Material3.LabelSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/duration_slider_start"
            app:layout_constraintEnd_toStartOf="@+id/long_break_duration_slider"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/long_break_duration_text" />

        <TextView
            android:id="@+id/long_break_slider_end_label"
            style="@style/TextAppearance.Material3.LabelSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/duration_slider_end"
            app:layout_constraintBottom_toBottomOf="@+id/long_break_duration_slider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/long_break_duration_slider"
            app:layout_constraintTop_toTopOf="@+id/long_break_duration_slider" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>